# lesspass.rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: blackbox.rs  make-blackbox-tests.sh
