[package]
name        = "lesspass"
description = "An efficient implementation of the LessPass password generator."
version     = "0.4.1"
authors     = ["Grégoire Geis <opensource@gregoirege.is>"]

repository = "https://github.com/71/lesspass.rs"
readme     = "README.md"
license    = "GPL-3.0-only"
edition    = "2021"
rust-version = "1.60"  # MSRV

keywords = ["cli", "password", "generator"]
categories = ["algorithms", "command-line-utilities"]

[lib]
name = "lesspass"
path = "src/lib.rs"

[[bin]]
name = "lesspass"
path = "src/main.rs"
required-features = ["default"]

[dependencies]
bitflags    = "1.2"
hmac        = "0.12"
uint        = { version = "0.9", default-features = false }
pbkdf2      = { version = "0.11", default-features = false }
sha2        = { version = "0.10", default-features = false }

atty      = { version = "0.2", optional = true }
clap      = { version = "4.0", optional = true, features = ["derive"] }
rpassword = { version = "7.1", optional = true }

[features]
default = [ "atty", "clap", "rpassword", "std" ]
std = []
